--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -29,14 +29,14 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Orçamentos aprovados</span>
-                    <div class="text-900 font-medium text-xl">{{dashboard.totalOrcamentosMes | currency:'BRL' }}</div>
+                    <div class="text-900 font-medium text-xl">{{dashboard.totalOrcamentosMes}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-green-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-dollar text-green-500 text-xl"></i>
                 </div>
             </div>
-            <span class="font-medium" [ngClass]="{'text-green-500' : (dashboard.diferencaOrcamentosMesAnterior >= 0), 'text-red-500' : (dashboard.diferencaOrcamentosMesAnterior < 0)}">%{{dashboard.diferencaOrcamentosMesAnterior + (dashboard.diferencaOrcamentosMesAnterior >= 0 ? '+' : '-' )}}  </span>
+            <span class="font-medium" [ngClass]="{'text-green-500' : (dashboard.diferencaOrcamentosMesAnterior >= 0), 'text-red-500' : (dashboard.diferencaOrcamentosMesAnterior < 0)}">{{dashboard.diferencaOrcamentosMesAnterior + (dashboard.diferencaOrcamentosMesAnterior >= 0 ? '+' : '-' )}}  </span>
             <span class="text-500">do que último mês</span>
         </div>
     </div>
@@ -52,7 +52,7 @@
                     <i class="pi pi-map-marker text-cyan-500 text-xl"></i>
                 </div>
             </div>
-            <span class="font-medium" [ngClass]="{'text-green-500' : (dashboard.diferencaVisitasMesAnterior >= 0), 'text-red-500' : (dashboard.diferencaVisitasMesAnterior < 0)}">{{dashboard.diferencaVisitasMesAnterior + (dashboard.diferencaVisitasMesAnterior >= 0 ? '+' : '-' )}}  </span>
+            <span class="font-medium" [ngClass]="{'text-green-500' : (dashboard.diferencaInstalacoesMesAnterior >= 0), 'text-red-500' : (dashboard.diferencaInstalacoesMesAnterior < 0)}">{{dashboard.diferencaInstalacoesMesAnterior + (dashboard.diferencaInstalacoesMesAnterior >= 0 ? '+' : '-' )}}  </span>
             <span class="text-500">do que último mês</span>
         </div>
     </div>
