--- a/src/app/relatorios/orcamento-page-relatorio/orcamento-page-relatorio.component.html
+++ b/src/app/relatorios/orcamento-page-relatorio/orcamento-page-relatorio.component.html
@@ -156,5 +156,9 @@
             </ng-template>
         </p-dialog>
 
+
+        <p-dialog [(visible)]="buscarOrcamentoLoading" header="Buscando registros..." [modal]="true" [style]="{ width: '450px' }" [closable]="false">
+            <p-progressSpinner [style]="{ display: 'flex' }"></p-progressSpinner>
+        </p-dialog>
     </div>
 </div>
