--- a/src/app/relatorios/visita-page-relatorio/visita-page-relatorio.component.html
+++ b/src/app/relatorios/visita-page-relatorio/visita-page-relatorio.component.html
@@ -188,5 +188,8 @@
                 </div>
             </ng-template>
         </p-dialog>
+        <p-dialog [(visible)]="buscarVisitaLoading" header="Buscando registros..." [modal]="true" [style]="{ width: '450px' }" [closable]="false">
+            <p-progressSpinner [style]="{ display: 'flex' }"></p-progressSpinner>
+        </p-dialog>
     </div>
 </div>
