--- a/src/app/solicitacao-servico/visita-page/visita-page.component.html
+++ b/src/app/solicitacao-servico/visita-page/visita-page.component.html
@@ -340,5 +340,9 @@
                 <button pButton pRipple icon="pi pi-check" class="p-button-text p-button-success" label="Finalizar Visita" (click)="confirmFinalizarVisita()" [loading]="visitaLoading"></button>
             </ng-template>
         </p-dialog>
+
+        <p-dialog [(visible)]="buscarProfissionaisLoading || buscarVisitaLoading" header="Buscando registros..." [modal]="true" [style]="{ width: '450px' }" [closable]="false">
+            <p-progressSpinner [style]="{ display: 'flex' }"></p-progressSpinner>
+        </p-dialog>
     </div>
 </div>
