--- a/src/app/relatorios/cliente-page/cliente-page.component.html
+++ b/src/app/relatorios/cliente-page/cliente-page.component.html
@@ -44,5 +44,8 @@
                 </ng-template>
             </p-table>
         </div>
+        <p-dialog [(visible)]="clienteLoading" header="Buscando registros..." [modal]="true" [style]="{ width: '450px' }" [closable]="false">
+            <p-progressSpinner [style]="{ display: 'flex' }"></p-progressSpinner>
+        </p-dialog>
     </div>
 </div>
