--- a/src/app/solicitacao-servico/profissional-page/profissional-page.component.html
+++ b/src/app/solicitacao-servico/profissional-page/profissional-page.component.html
@@ -99,5 +99,8 @@
             </ng-template>
         </p-dialog>
 
+        <p-dialog [(visible)]="buscarProfissionalLoading" header="Buscando registros..." [modal]="true" [style]="{ width: '450px' }" [closable]="false">
+            <p-progressSpinner [style]="{ display: 'flex' }"></p-progressSpinner>
+        </p-dialog>
     </div>
 </div>
