Alteração dos modals

--- a/src/app/solicitacao-servico/visita-page/visita-page.component.html
+++ b/src/app/solicitacao-servico/visita-page/visita-page.component.html
@@ -81,8 +81,8 @@
             </p-table>
         </div>
 
-        <!-- TODO: Quando for criar os clientes, permitir que selecione clientes já existentes usando um p-autoComplete no nome do cliente, que quando selecionado popula todos os outros campos -->
-        <p-dialog [(visible)]="visitaDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true>
+        <!-- TODO: Quando for criar as visitas ou etapas seguintes, permitir que selecione clientes já existentes usando um p-autoComplete no nome do cliente, que quando selecionado popula todos os outros campos -->
+        <p-dialog [(visible)]="visitaDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true [draggable]="false" [resizable]="false">
             <ng-template pTemplate="content">
                 <div class="formgrid grid">
                     <div class="col-12">
@@ -211,7 +211,7 @@
             </ng-template>
         </p-dialog>
 
-        <p-dialog [(visible)]="orcamentoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true>
+        <p-dialog [(visible)]="orcamentoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true [draggable]="false" [resizable]="false">
             <ng-template pTemplate="content">
                 <div class="formgrid grid">
                     <div class="col-12">
