--- a/src/app/relatorios/visita-page-relatorio/visita-page-relatorio.component.html
+++ b/src/app/relatorios/visita-page-relatorio/visita-page-relatorio.component.html
@@ -72,7 +72,7 @@
             </p-table>
         </div>
 
-        <p-dialog [(visible)]="visitaDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true>
+        <p-dialog [(visible)]="visitaDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true [draggable]="false" [resizable]="false">
             <ng-template pTemplate="content">
                 <div class="formgrid grid">
                     <div class="col-12">
