--- a/src/app/solicitacao-servico/instalacao-page/instalacao-page.component.html
+++ b/src/app/solicitacao-servico/instalacao-page/instalacao-page.component.html
@@ -73,7 +73,7 @@
             </p-table>
         </div>
 
-        <p-dialog [(visible)]="instalacaoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true>
+        <p-dialog [(visible)]="instalacaoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true [draggable]="false" [resizable]="false">
             <ng-template pTemplate="content">
                 <div class="formgrid grid">
                     <div class="col-12">
