--- a/src/app/solicitacao-servico/orcamento-page/orcamento-page.component.html
+++ b/src/app/solicitacao-servico/orcamento-page/orcamento-page.component.html
@@ -63,7 +63,7 @@
             </p-table>
         </div>
 
-        <p-dialog [(visible)]="orcamentoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true>
+        <p-dialog [(visible)]="orcamentoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true [draggable]="false" [resizable]="false">
             <ng-template pTemplate="content">
                 <div class="formgrid grid">
                     <div class="col-12">
@@ -159,7 +159,7 @@
             </ng-template>
         </p-dialog>
 
-        <p-dialog [(visible)]="instalacaoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true>
+        <p-dialog [(visible)]="instalacaoDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true [draggable]="false" [resizable]="false">
             <ng-template pTemplate="content">
                 <div class="formgrid grid">
                     <div class="col-12">
