--- a/src/app/solicitacao-servico/profissional-page/profissional-page.component.html
+++ b/src/app/solicitacao-servico/profissional-page/profissional-page.component.html
@@ -62,7 +62,7 @@
             </p-table>
         </div>
 
-        <p-dialog header="Dados Profissional" [(visible)]="profissionalDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true >
+        <p-dialog header="Dados Profissional" [(visible)]="profissionalDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true [draggable]="false" [resizable]="false" >
             <ng-template pTemplate="content">
                 <div class="formgrid grid mt-3">
                     <div class="field col-6 mt-3 mt-3">
